--- a/buttons.css
+++ b/buttons.css
@@ -1,3 +1,7 @@
 .skelemba {
     padding-left: 10px;
+    background-color: rgb(31, 136, 61);
+    border-radius: ;
+   border-width: 1px;
+   height: 15px;
 }
