--- a/buttons.css
+++ b/buttons.css
@@ -1,7 +1,11 @@
 .skelemba {
     padding-left: 10px;
     background-color: rgb(31, 136, 61);
-    border-radius: ;
+    border-radius: 20px;
    border-width: 1px;
-   height: 15px;
+   height: 50px;
+   padding-top: 5px;
+   padding-bottom: 5pxs;
+   color: aliceblue;
+   
 }
